[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/TransitionKit.gd" type="Script" id=1]

[node name="TransitionKit" type="CanvasLayer"]
layer = 8
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
input_pass_on_modal_close_click = false
color = Color( 0, 0, 0, 1 )

[node name="TweenFadeIn" type="Tween" parent="."]

[node name="TweenFadeOut" type="Tween" parent="."]

[connection signal="tween_completed" from="TweenFadeIn" to="." method="_on_TweenFadeIn_tween_completed"]
[connection signal="tween_completed" from="TweenFadeOut" to="." method="_on_TweenFadeOut_tween_completed"]
